--- a/photon-wells/Cargo.toml
+++ b/photon-wells/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ndarray = "0.15"
+num-complex = "0.4"
+rand = "0.8"
+rand_distr = "0.4"
+plotters = "0.3"
