--- a/first-product/Cargo.toml
+++ b/first-product/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 ndarray = "0.15"
 num-complex = "0.4"
 rand = "0.8"
-rug = "1.26.0"
+num-bigint = "0.4"
+num-rational = "0.4"
+lazy_static = "1.5.0"
